Arrange the files structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" type="text/css" />
+    <link rel="stylesheet" href="/assets/css/index.css" type="text/css" />
     <title>Vallie's Estate</title>
   </head>
   <body>
@@ -44,25 +44,25 @@
       </div>
 
       <div class="House_Img">
-        <img src="images/image 1.png" alt="House Image 1" />
+        <img src="assets/images/image 1.png" alt="House Image 1" />
       </div>
     </div>
     <div class="search">
       <div class="loc">
-        Location <img src="images/caret.png" alt="caret">
+        Location <img src="assets/images/caret.png" alt="caret">
         <p class="search_loc">Lekki</p>
       </div>
       <div class="loc">Property Type
-        <img src="images/caret.png" alt="caret">
+        <img src="assets/images/caret.png" alt="caret">
         <p class="search_loc">Duplex</p>
       </div>
 
       <div class="loc">Max Price 
-        <img src="images/caret.png" alt="caret">
+        <img src="assets/images/caret.png" alt="caret">
         <p class="search_loc">$10000</p>
       </div>
       <button class="but_3">
-        <img src="images/search.png" alt="Search" value="Searh"/>Search
+        <img src="assets/images/search.png" alt="Search" value="Searh"/>Search
       </button>
     </div>
     <!-- Products-->
@@ -78,7 +78,7 @@
       <span>
         <div class="items">
       <div class="location">
-        <img src="images/address mark.png" alt="Address Mark" class="loc_pin" />
+        <img src="assets/images/address mark.png" alt="Address Mark" class="loc_pin" />
         <h2>Find Home</h2>
         <p>
           Our Properies are located at prime areas where by there won't ne
@@ -88,7 +88,7 @@
 
       <div class="official">
         <img
-          src="images/Secure data protection with fingerprint and lock.png"
+          src="assets/images/Secure data protection with fingerprint and lock.png"
           alt="Secure Image"
           class="secure"
         />
@@ -100,7 +100,7 @@
       </div>
 
       <div class="payment">
-        <img src="images/Smart house.png" alt="Smart House" id="smart" "/>
+        <img src="assets/images/Smart house.png" alt="Smart House" id="smart" "/>
         <h2>Make Payments</h2>
         <p>
           Our estates comes with good network, portable water, 24hrs light and
@@ -114,7 +114,7 @@
 
     <div class="choose">
 <div class="choose_1">
-  <img src="images/image 2.png" alt="House Image 2" class="img_2" />
+  <img src="assets/images/image 2.png" alt="House Image 2" class="img_2" />
   <!-- Insert the image -->
 </div>
       <div class="choose_2">
@@ -134,20 +134,20 @@
         <div class="prts_">
         <div class="Images">
           <div class="prts__pal1">
-           <figure> <img src="images/palace.png" alt="House Image 3" />
+           <figure> <img src="assets/images/palace.png" alt="House Image 3" />
             <figcaption>The Palace Duplex Lekki,phase 2 $2000</figcaption>
           </figure>
           
         </div>
         <div class="prts_rex3">
           <figure>
-            <img src="images/rexona.png" alt="House Image 5" />
+            <img src="assets/images/rexona.png" alt="House Image 5" />
             <figcaption> REXONA Duplex Lekki,phase 2 $2000</figcaption>
           </figure>
         </div>
 
         <div class="ptrs_ror2">
-          <figure><img src="images/ivyrory.png" alt="House Image 4" class="rory" />
+          <figure><img src="assets/images/ivyrory.png" alt="House Image 4" class="rory" />
           <figcaption>IVY RORY Duplex Lekki,phase 2 $2000</figcaption>
         </figure>
         </div>
@@ -246,4 +246,7 @@
     </div>
   </div>
 </body>
+<footer>
+  
+</footer>
 </html>
